# KResearch

./: CONTRIBUTING.md  README.md  pyproject.toml
kresearch/llm/: gemini_adapter.py  gemini_provider.py  models.py
src/kresearch/: __init__.py  __main__.py  cli.py  config.py  orchestrator.py  prompts.py
src/kresearch/models/: __init__.py  state.py
src/kresearch/output/: __init__.py  console.py  markdown.py
src/kresearch/providers/: __init__.py  base.py
src/kresearch/providers/anthropic/: __init__.py
src/kresearch/providers/custom/: provider.py
src/kresearch/providers/gemini/: __init__.py  chat.py  provider.py
src/kresearch/providers/openai/: __init__.py  chat.py  provider.py
src/kresearch/providers/perplexity/: __init__.py
src/kresearch/providers/xai/: __init__.py
src/kresearch/tools/: __init__.py  code_executor.py  registry.py  research_tools.py  subagent_tool.py  web_reader.py  web_search.py
src/kresearch/web/: __init__.py  app.py  db.py  models.py  routes.py  session.py  webui.py  ws.py
src/kresearch/web/static/: index.html
tests/: conftest.py
